<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/LinearLayout01"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"> 

	<RadioGroup
	   	android:layout_width="wrap_content"
	   	android:layout_height="wrap_content"
	   	android:orientation="vertical"
	 	android:layout_alignParentTop="true"
	 	android:layout_alignParentLeft="true"
	 	android:id="@+id/XSetting"
	 	android:text="@string/XSett">
 
 		<RadioButton 
 		     android:text="@string/Tone"
			android:id="@+id/toneX"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
	   		android:layout_weight="1">
		</RadioButton>
		<RadioButton android:text="@string/Volume"
			android:id="@+id/volumeX"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
		</RadioButton>
		<RadioButton android:text="@string/HPass"
			android:id="@+id/hPassX"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
   		</RadioButton>
   		<RadioButton 
   		    android:text="@string/LPass"
			android:id="@+id/lPassX"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
		</RadioButton>
	</RadioGroup>
	
	<RadioGroup
	   	android:layout_width="wrap_content"
	   	android:layout_height="wrap_content"
	   	android:orientation="vertical"
	 	android:layout_toRightOf="@id/XSetting"
	 	android:id="@+id/YSetting"
	 	android:text="@string/YSett">
 
 		<RadioButton android:text="@string/Tone"
			android:id="@+id/toneY"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true">
		</RadioButton>
		<RadioButton android:text="@string/Volume"
			android:id="@+id/volumeY"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
		</RadioButton>
	</RadioGroup>
	
	<RadioGroup
	   	android:layout_width="wrap_content"
	   	android:layout_height="wrap_content"
	   	android:orientation="vertical"
	 	android:layout_toRightOf="@id/YSetting"
	 	android:id="@+id/ZSetting"
	 	android:text="@string/ZSett">
 
 		<RadioButton android:text="@string/Tone"
			android:id="@+id/toneZ"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true">
		</RadioButton>
		<RadioButton 
		    android:text="@string/Volume"
			android:id="@+id/volumeZ"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/toneZ">
		</RadioButton>
		<RadioButton
		    android:text="@string/HPass"
			android:id="@+id/hPassZ"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/volumeZ">
   		</RadioButton>
   		<RadioButton android:text="@string/LPass"
			android:id="@+id/lPassZ"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/hPassZ">
		</RadioButton>
	</RadioGroup>
</RelativeLayout>